--- a/AdminPortal/src/app/user-management/user-management.component.html
+++ b/AdminPortal/src/app/user-management/user-management.component.html
@@ -26,6 +26,9 @@
     <mat-tab label="Product-List" id="dpage" *ngIf="userType=='Client' || isAdmin">
       <app-productlist></app-productlist>
     </mat-tab>
+    <mat-tab label="Product-Bulk-Upload" id="dpage" *ngIf="userType=='Client' || isAdmin">
+      <app-productBulkUpload></app-productBulkUpload>
+    </mat-tab>
     <mat-tab label="Header-Links" id="linkc" *ngIf="userType=='Client' || isAdmin">
       <app-headerlinks></app-headerlinks>
     </mat-tab>
